--- a/education.html
+++ b/education.html
@@ -616,24 +616,28 @@
                     <h3>Core Computer Science</h3>
                     <ul class="course-list">
                         <li class="course-item">
-                            <span class="course-name">Data Structures and Algorithms</span>
-                            <span class="course-code">CS 400</span>
+                            <span class="course-name">Introduction to Algorithms</span>
+                            <span class="course-code">CS 577</span>
                         </li>
                         <li class="course-item">
                             <span class="course-name">Software Engineering</span>
                             <span class="course-code">CS 506</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Computer Organization</span>
+                            <span class="course-name">Machine Organization and Programming</span>
                             <span class="course-code">CS 354</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Programming III</span>
-                            <span class="course-code">CS 300</span>
+                            <span class="course-name">Software Design</span>
+                            <span class="course-code">CS 342</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Programming II</span>
-                            <span class="course-code">CS 200</span>
+                            <span class="course-name">Data Structures</span>
+                            <span class="course-code">CS 251</span>
+                        </li>
+                        <li class="course-item">
+                            <span class="course-name">Programming Practicum</span>
+                            <span class="course-code">CS 211</span>
                         </li>
                     </ul>
                 </div>
@@ -650,16 +654,8 @@
                             <span class="course-code">CS 540</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Machine Learning</span>
-                            <span class="course-code">CS 760</span>
-                        </li>
-                        <li class="course-item">
-                            <span class="course-name">Computer Vision</span>
-                            <span class="course-code">CS 766</span>
-                        </li>
-                        <li class="course-item">
-                            <span class="course-name">Natural Language Processing</span>
-                            <span class="course-code">CS 769</span>
+                            <span class="course-name">Accelerated Honors Computer Graphics</span>
+                            <span class="course-code">CS 559</span>
                         </li>
                     </ul>
                 </div>
@@ -672,20 +668,12 @@
                     <h3>Systems & Theory</h3>
                     <ul class="course-list">
                         <li class="course-item">
-                            <span class="course-name">Operating Systems</span>
+                            <span class="course-name">Introduction to Operating Systems</span>
                             <span class="course-code">CS 537</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Database Management Systems</span>
-                            <span class="course-code">CS 564</span>
-                        </li>
-                        <li class="course-item">
-                            <span class="course-name">Computer Networks</span>
-                            <span class="course-code">CS 640</span>
-                        </li>
-                        <li class="course-item">
-                            <span class="course-name">Theory of Computation</span>
-                            <span class="course-code">CS 520</span>
+                            <span class="course-name">Mathematical Foundations of Computing</span>
+                            <span class="course-code">CS 151</span>
                         </li>
                     </ul>
                 </div>
@@ -698,20 +686,20 @@
                     <h3>Mathematics</h3>
                     <ul class="course-list">
                         <li class="course-item">
+                            <span class="course-name">Intro to Theory of Probability</span>
+                            <span class="course-code">MATH 431</span>
+                        </li>
+                        <li class="course-item">
+                            <span class="course-name">Applied Linear Algebra</span>
+                            <span class="course-code">MATH 310</span>
+                        </li>
+                        <li class="course-item">
                             <span class="course-name">Calculus III</span>
-                            <span class="course-code">MATH 234</span>
+                            <span class="course-code">MATH 210</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Linear Algebra</span>
-                            <span class="course-code">MATH 340</span>
-                        </li>
-                        <li class="course-item">
-                            <span class="course-name">Discrete Mathematics</span>
-                            <span class="course-code">CS 240</span>
-                        </li>
-                        <li class="course-item">
-                            <span class="course-name">Statistics</span>
-                            <span class="course-code">STAT 371</span>
+                            <span class="course-name">Physics I</span>
+                            <span class="course-code">PHYS 141</span>
                         </li>
                     </ul>
                 </div>
@@ -724,28 +712,33 @@
                     <h3>Honors Program</h3>
                     <ul class="course-list">
                         <li class="course-item">
-                            <span class="course-name">Critical Thinking in the Digital Age</span>
-                            <span class="course-code">HONORS 201</span>
+                            <span class="course-name">Honors Intro to Stochastic Processes</span>
+                            <span class="course-code">MATH 632</span>
                             <span class="course-grade">A</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Global Perspectives on Technology</span>
-                            <span class="course-code">HONORS 301</span>
+                            <span class="course-name">Honors Literature and Pop Culture</span>
+                            <span class="course-code">ENGL 177</span>
                             <span class="course-grade">A</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Ethics in Emerging Technologies</span>
-                            <span class="course-code">HONORS 305</span>
+                            <span class="course-name">Honors Yiddish Literature and Culture</span>
+                            <span class="course-code">GERMAN 279</span>
                             <span class="course-grade">A-</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Research Methods & Analysis</span>
-                            <span class="course-code">HONORS 285</span>
+                            <span class="course-name">Honors Intro to Political Theory</span>
+                            <span class="course-code">POLI SCI 130</span>
                             <span class="course-grade">A</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Leadership in Innovation</span>
-                            <span class="course-code">HONORS 320</span>
+                            <span class="course-name">Honors General Chemistry</span>
+                            <span class="course-code">CHEM 109</span>
+                            <span class="course-grade">A</span>
+                        </li>
+                        <li class="course-item">
+                            <span class="course-name">Honors Intro to Biology</span>
+                            <span class="course-code">BIO 153</span>
                             <span class="course-grade">A</span>
                         </li>
                     </ul>
@@ -765,23 +758,22 @@
             <div class="projects-grid">
                 <div class="academic-project">
                     <div class="project-header">
-                        <div class="project-course">CS 760 - Machine Learning</div>
-                        <h4 class="project-title">Neural Network Music Generator</h4>
+                        <div class="project-course">CS 398 - Undergrad Design/Research</div>
+                        <h4 class="project-title">Digital Hand Pen Whiteboard</h4>
                     </div>
                     <div class="project-content">
                         <p class="project-description">
-                            Built a deep learning model using LSTM networks to generate original music compositions. 
-                            Trained on classical piano pieces and achieved coherent melodic structure generation.
+                            Created a gesture recognition whiteboard using MediaPipe, OpenCV, and PyCharm that enabled real-time interactions with 90% accuracy rate for intuitive digital drawing and interaction.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Python</span>
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">LSTM</span>
-                            <span class="tech-tag">Music21</span>
+                            <span class="tech-tag">MediaPipe</span>
+                            <span class="tech-tag">OpenCV</span>
+                            <span class="tech-tag">PyCharm</span>
                         </div>
                         <div class="project-footer">
-                            <div class="project-grade">Final Grade: A-</div>
-                            <a href="https://github.com/nullPtrErikaS/neural-music-generator" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                            <div class="project-grade">Presented at ERSP Conference</div>
+                            <a href="https://github.com/nullPtrErikaS/digital-hand-pen-whiteboard" class="project-github-btn" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i>
                                 View Code
                             </a>
@@ -791,23 +783,22 @@
 
                 <div class="academic-project">
                     <div class="project-header">
-                        <div class="project-course">CS 506 - Software Engineering</div>
-                        <h4 class="project-title">Campus Food Tracker App</h4>
+                        <div class="project-course">CS 342 - Software Design</div>
+                        <h4 class="project-title">Full-Stack Social Productivity App</h4>
                     </div>
                     <div class="project-content">
                         <p class="project-description">
-                            Led team of 5 to develop full-stack web application tracking dining hall wait times and menu items. 
-                            Implemented agile methodology and comprehensive testing suite.
+                            Engineered a full-stack social-media productivity app during a hackathon that boosts user productivity through social interaction and gamification features.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">Jest</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-footer">
                             <div class="project-grade">Final Grade: A</div>
-                            <a href="https://github.com/nullPtrErikaS/campus-food-tracker" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/nullPtrErikaS/social-productivity-app" class="project-github-btn" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i>
                                 View Code
                             </a>
@@ -817,23 +808,22 @@
 
                 <div class="academic-project">
                     <div class="project-header">
-                        <div class="project-course">CS 766 - Computer Vision</div>
-                        <h4 class="project-title">Real-time Object Detection</h4>
+                        <div class="project-course">CS 251 - Data Structures</div>
+                        <h4 class="project-title">Space Invaders Game</h4>
                     </div>
                     <div class="project-content">
                         <p class="project-description">
-                            Implemented YOLO algorithm for real-time object detection in video streams. 
-                            Optimized for mobile deployment with 85% accuracy on custom dataset.
+                            Developed a Space Invaders clone using Python and Turtle graphics with progressive difficulty levels, high scoreboard feature, and enhanced user interface design.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Python</span>
-                            <span class="tech-tag">OpenCV</span>
-                            <span class="tech-tag">PyTorch</span>
-                            <span class="tech-tag">YOLO</span>
+                            <span class="tech-tag">Turtle Graphics</span>
+                            <span class="tech-tag">Game Development</span>
+                            <span class="tech-tag">UI Design</span>
                         </div>
                         <div class="project-footer">
-                            <div class="project-grade">Final Grade: B+</div>
-                            <a href="https://github.com/nullPtrErikaS/realtime-object-detection" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                            <div class="project-grade">Final Grade: A-</div>
+                            <a href="https://github.com/nullPtrErikaS/space-invaders-python" class="project-github-btn" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i>
                                 View Code
                             </a>
@@ -843,23 +833,22 @@
 
                 <div class="academic-project">
                     <div class="project-header">
-                        <div class="project-course">CS 537 - Operating Systems</div>
-                        <h4 class="project-title">Custom Memory Allocator</h4>
+                        <div class="project-course">CS 211 - Programming Practicum</div>
+                        <h4 class="project-title">Harry Potter Sorting Hat</h4>
                     </div>
                     <div class="project-content">
                         <p class="project-description">
-                            Designed and implemented a custom memory allocator in C with advanced heap management. 
-                            Achieved 20% performance improvement over standard malloc implementation.
+                            Built an interactive game to simulate the Sorting Hat's house selection process using algorithm that analyzes and weighs user responses to determine suitable house placement.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">C</span>
-                            <span class="tech-tag">Systems Programming</span>
-                            <span class="tech-tag">Memory Management</span>
-                            <span class="tech-tag">Performance Testing</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Algorithm Design</span>
+                            <span class="tech-tag">Interactive Systems</span>
+                            <span class="tech-tag">Logic Programming</span>
                         </div>
                         <div class="project-footer">
-                            <div class="project-grade">Final Grade: B+</div>
-                            <a href="https://github.com/nullPtrErikaS/custom-memory-allocator" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                            <div class="project-grade">Final Grade: A</div>
+                            <a href="https://github.com/nullPtrErikaS/harry-potter-sorting-hat" class="project-github-btn" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i>
                                 View Code
                             </a>
