--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="images/Sy, Erika - Headshot.png" alt="Erika Sy profile photo" class="about-pic">
                 
                 <!-- Floating Stats Cards -->
-                <div class="floating-stat stat1" aria-label="5+ internships completed">
+                <!-- <div class="floating-stat stat1" aria-label="5+ internships completed">
                     <div class="stat-icon" aria-hidden="true">
                         <i class="fas fa-briefcase"></i>
                     </div>
@@ -100,13 +100,12 @@
                         <span class="stat-number">16+</span>
                         <span class="stat-label">Projects</span>
                     </div>
-                </div>
+                </div> -->
             </div>
             
             <div class="about-content">
                 <div class="subtitle">LET ME INTRODUCE MYSELF</div>
                 <h2>About me</h2>
-                <p>A story of passion and perseverance.</p>
                 <p>I'm a dreamer who dreams big and follows those dreams with unwavering commitment and dedication. My tech journey began with a love for sandbox games, where I discovered the joy of limitless possibilities and letting my creativity run free. It wasn't until my first high school Java class that I truly discovered the power of coding - programming offers the ultimate creative freedom and enables profound problem-solving capabilities.</p>
                 <p>I'm passionate about developing technology that helps people and propels society forward meaningfully. I believe in not just chasing dreams but catching them, and I'm excited to continue pushing boundaries and exploring new opportunities to create meaningful impact through technology.</p>
                 <div class="contact-info">
