added pictures and updated info

--- a/education.html
+++ b/education.html
@@ -287,15 +287,15 @@
             position: absolute;
             top: 1rem;
             right: 1rem;
-            background: #ffd700;
-            color: #333;
+            background: #ff7300;
+            color: white;
             padding: 0.2rem 0.6rem;
             border-radius: 12px;
             font-size: 0.65rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.3px;
-            opacity: 0.8;
+            opacity: 0.9;
         }
 
         .academic-projects {
@@ -570,14 +570,13 @@
     <section class="university-info">
         <div class="university-container fade-in">
             <div class="university-logo">
-                <img src="images/uw-madison-logo.png" alt="University of Wisconsin Madison logo">
+                <img src="images/uw logo.jpg" alt="University of Wisconsin Madison logo">
                 <h3>University of Wisconsin, Madison</h3>
             </div>
             <div class="university-details">
                 <h2>Bachelor of Science in Computer Science</h2>
                 <div class="degree-info">
                     <h3>Expected Graduation: May 2026</h3>
-                    <p><strong>Concentration:</strong> Artificial Intelligence & Machine Learning</p>
                     <p><strong>Minor:</strong> Mathematics</p>
                 </div>
                 
@@ -599,7 +598,119 @@
         </div>
     </section>
 
-    <!-- Coursework Section -->
+    <!-- Academic Projects (Now First) -->
+    <section class="academic-projects">
+        <div class="coursework-container fade-in">
+            <div class="section-header">
+                <div class="subtitle">STANDOUT ACADEMIC WORK</div>
+                <h2>Course Projects</h2>
+            </div>
+
+            <div class="projects-grid">
+                <div class="academic-project">
+                    <div class="project-header">
+                        <div class="project-course">CS 398 - Undergrad Design/Research</div>
+                        <h4 class="project-title">Digital Hand Pen Whiteboard</h4>
+                    </div>
+                    <div class="project-content">
+                        <p class="project-description">
+                            Created a gesture recognition whiteboard using MediaPipe, OpenCV, and PyCharm that enabled real-time interactions with 90% accuracy rate for intuitive digital drawing and interaction.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">MediaPipe</span>
+                            <span class="tech-tag">OpenCV</span>
+                            <span class="tech-tag">PyCharm</span>
+                        </div>
+                        <div class="project-footer">
+                            <div class="project-grade">Presented at ERSP Conference</div>
+                            <a href="https://github.com/nullPtrErikaS/digital-hand-pen-whiteboard" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="academic-project">
+                    <div class="project-header">
+                        <div class="project-course">CS 342 - Software Design</div>
+                        <h4 class="project-title">Full-Stack Social Productivity App</h4>
+                    </div>
+                    <div class="project-content">
+                        <p class="project-description">
+                            Engineered a full-stack social-media productivity app during a hackathon that boosts user productivity through social interaction and gamification features.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">Bootstrap</span>
+                        </div>
+                        <div class="project-footer">
+                            <div class="project-grade">Final Grade: A</div>
+                            <a href="https://github.com/nullPtrErikaS/social-productivity-app" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="academic-project">
+                    <div class="project-header">
+                        <div class="project-course">CS 251 - Data Structures</div>
+                        <h4 class="project-title">Space Invaders Game</h4>
+                    </div>
+                    <div class="project-content">
+                        <p class="project-description">
+                            Developed a Space Invaders clone using Python and Turtle graphics with progressive difficulty levels, high scoreboard feature, and enhanced user interface design.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Turtle Graphics</span>
+                            <span class="tech-tag">Game Development</span>
+                            <span class="tech-tag">UI Design</span>
+                        </div>
+                        <div class="project-footer">
+                            <div class="project-grade">Final Grade: A-</div>
+                            <a href="https://github.com/nullPtrErikaS/space-invaders-python" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="academic-project">
+                    <div class="project-header">
+                        <div class="project-course">CS 211 - Programming Practicum</div>
+                        <h4 class="project-title">Harry Potter Sorting Hat</h4>
+                    </div>
+                    <div class="project-content">
+                        <p class="project-description">
+                            Built an interactive game to simulate the Sorting Hat's house selection process using algorithm that analyzes and weighs user responses to determine suitable house placement.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Algorithm Design</span>
+                            <span class="tech-tag">Interactive Systems</span>
+                            <span class="tech-tag">Logic Programming</span>
+                        </div>
+                        <div class="project-footer">
+                            <div class="project-grade">Final Grade: A</div>
+                            <a href="https://github.com/nullPtrErikaS/harry-potter-sorting-hat" class="project-github-btn" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github"></i>
+                                View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Coursework Section (Now Second) -->
     <section class="coursework-section">
         <div class="coursework-container fade-in">
             <div class="section-header">
@@ -742,118 +853,6 @@
                             <span class="course-grade">A</span>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Academic Projects -->
-    <section class="academic-projects">
-        <div class="coursework-container fade-in">
-            <div class="section-header">
-                <div class="subtitle">STANDOUT ACADEMIC WORK</div>
-                <h2>Course Projects</h2>
-            </div>
-
-            <div class="projects-grid">
-                <div class="academic-project">
-                    <div class="project-header">
-                        <div class="project-course">CS 398 - Undergrad Design/Research</div>
-                        <h4 class="project-title">Digital Hand Pen Whiteboard</h4>
-                    </div>
-                    <div class="project-content">
-                        <p class="project-description">
-                            Created a gesture recognition whiteboard using MediaPipe, OpenCV, and PyCharm that enabled real-time interactions with 90% accuracy rate for intuitive digital drawing and interaction.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">MediaPipe</span>
-                            <span class="tech-tag">OpenCV</span>
-                            <span class="tech-tag">PyCharm</span>
-                        </div>
-                        <div class="project-footer">
-                            <div class="project-grade">Presented at ERSP Conference</div>
-                            <a href="https://github.com/nullPtrErikaS/digital-hand-pen-whiteboard" class="project-github-btn" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-github"></i>
-                                View Code
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="academic-project">
-                    <div class="project-header">
-                        <div class="project-course">CS 342 - Software Design</div>
-                        <h4 class="project-title">Full-Stack Social Productivity App</h4>
-                    </div>
-                    <div class="project-content">
-                        <p class="project-description">
-                            Engineered a full-stack social-media productivity app during a hackathon that boosts user productivity through social interaction and gamification features.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">Bootstrap</span>
-                        </div>
-                        <div class="project-footer">
-                            <div class="project-grade">Final Grade: A</div>
-                            <a href="https://github.com/nullPtrErikaS/social-productivity-app" class="project-github-btn" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-github"></i>
-                                View Code
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="academic-project">
-                    <div class="project-header">
-                        <div class="project-course">CS 251 - Data Structures</div>
-                        <h4 class="project-title">Space Invaders Game</h4>
-                    </div>
-                    <div class="project-content">
-                        <p class="project-description">
-                            Developed a Space Invaders clone using Python and Turtle graphics with progressive difficulty levels, high scoreboard feature, and enhanced user interface design.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">Turtle Graphics</span>
-                            <span class="tech-tag">Game Development</span>
-                            <span class="tech-tag">UI Design</span>
-                        </div>
-                        <div class="project-footer">
-                            <div class="project-grade">Final Grade: A-</div>
-                            <a href="https://github.com/nullPtrErikaS/space-invaders-python" class="project-github-btn" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-github"></i>
-                                View Code
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="academic-project">
-                    <div class="project-header">
-                        <div class="project-course">CS 211 - Programming Practicum</div>
-                        <h4 class="project-title">Harry Potter Sorting Hat</h4>
-                    </div>
-                    <div class="project-content">
-                        <p class="project-description">
-                            Built an interactive game to simulate the Sorting Hat's house selection process using algorithm that analyzes and weighs user responses to determine suitable house placement.
-                        </p>
-                        <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">Algorithm Design</span>
-                            <span class="tech-tag">Interactive Systems</span>
-                            <span class="tech-tag">Logic Programming</span>
-                        </div>
-                        <div class="project-footer">
-                            <div class="project-grade">Final Grade: A</div>
-                            <a href="https://github.com/nullPtrErikaS/harry-potter-sorting-hat" class="project-github-btn" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-github"></i>
-                                View Code
-                            </a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
