--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="work-in-progress-banner">
         <div class="ticker">
             <div class="ticker-content">
-                🚧 WORK IN PROGRESS: Some iteams may not be fully functional, or accurate • Updated regularly with new projects and improvements • 🚧 WORK IN PROGRESS: Some iteams may not be fully functional, or accurate • Updated regularly with new projects and improvements • 
+                🚧 WORK IN PROGRESS: Some items may not be fully functional, or accurate • Updated regularly with new projects and improvements • 🚧 WORK IN PROGRESS: Some items may not be fully functional, or accurate • Updated regularly with new projects and improvements • 
             </div>
         </div>
     </div>
