--- a/education.html
+++ b/education.html
@@ -8,6 +8,44 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Work in Progress Banner */
+        .work-in-progress-banner {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 40px;
+            background: linear-gradient(45deg, #ff7300, #ff5e00);
+            color: white;
+            z-index: 1001;
+            overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .ticker {
+            height: 100%;
+            display: flex;
+            align-items: center;
+        }
+
+        .ticker-content {
+            display: flex;
+            white-space: nowrap;
+            animation: scroll-left 30s linear infinite;
+            font-size: 0.9rem;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+        }
+
+        @keyframes scroll-left {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+
         /* Education-specific styles */
         .education-hero {
             min-height: 60vh;
@@ -518,7 +556,7 @@
             }
 
             .academic-stats {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(2, 1fr);
                 gap: 0.5rem;
             }
 
@@ -529,22 +567,33 @@
             .stat-number {
                 font-size: 1.2rem;
             }
+
+            .stat-icon {
+                font-size: 1rem;
+                margin-bottom: 0.3rem;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- Work in Progress Banner -->
+    <div class="work-in-progress-banner">
+        <div class="ticker">
+            <div class="ticker-content">
+                🚧 WORK IN PROGRESS: Some items may not be fully functional, or accurate • Updated regularly with new projects and improvements • 🚧 WORK IN PROGRESS: Some items may not be fully functional, or accurate • Updated regularly with new projects and improvements • 
+            </div>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <div class="logo" aria-label="Erika Sy Portfolio">Erika</div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="index.html#about" class="nav-link">About</a></li>
-                <li><a href="index.html#experience" class="nav-link">Experience</a></li>
-                <li><a href="index.html#portfolio" class="nav-link">Projects</a></li>
-                <li><a href="index.html#leadership" class="nav-link">Leadership</a></li>
-                <li><a href="#" class="nav-link" style="color: #ff7300;">Education</a></li>
-                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                <li><a href="#course-projects" class="nav-link">Course Projects</a></li>
+                <li><a href="#coursework" class="nav-link">Coursework</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation menu">
                 <span></span>
@@ -590,6 +639,10 @@
                         <span class="stat-label">CS Courses</span>
                     </div>
                     <div class="stat-item">
+                        <span class="stat-number">Honors</span>
+                        <span class="stat-label">Program Member</span>
+                    </div>
+                    <div class="stat-item">
                         <span class="stat-number">2026</span>
                         <span class="stat-label">Graduation</span>
                     </div>
@@ -599,7 +652,7 @@
     </section>
 
     <!-- Academic Projects (Now First) -->
-    <section class="academic-projects">
+    <section id="course-projects" class="academic-projects">
         <div class="coursework-container fade-in">
             <div class="section-header">
                 <div class="subtitle">STANDOUT ACADEMIC WORK</div>
@@ -711,7 +764,7 @@
     </section>
 
     <!-- Coursework Section (Now Second) -->
-    <section class="coursework-section">
+    <section id="coursework" class="coursework-section">
         <div class="coursework-container fade-in">
             <div class="section-header">
                 <div class="subtitle">COMPREHENSIVE TECHNICAL FOUNDATION</div>
@@ -854,6 +907,25 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="contact-container fade-in">
+            <h2>Let's Connect</h2>
+            <p>Ready to collaborate? Let's create something amazing together!</p>
+            <div class="social-links">
+                <a href="mailto:ebasy22@gmail.com" class="social-link" aria-label="Send email to Erika Sy">
+                    <i class="fas fa-envelope" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/erika-sy/" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Visit Erika Sy's LinkedIn profile">
+                    <i class="fab fa-linkedin" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com/nullPtrErikaS" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Visit Erika Sy's GitHub profile">
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                </a>
             </div>
         </div>
     </section>
